--- a/home.html
+++ b/home.html
@@ -2,44 +2,23 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="index.css" />
-  <script src="index.js" defer></script>
-
-  <link href="https://fonts.googleapis.com/css?family=Aldrich:regular" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css?family=Chakra+Petch:300,300italic,regular,italic,500,500italic,600,600italic,700,700italic" rel="stylesheet">
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Color Grid</title>
+    <link rel="stylesheet" href="home.css">
 
 </head>
 
 <body>
-    <div class="loader">
-        <span>The Garden of Forking Paths</span>
-        <span>The Garden of Forking Paths</span>
-
-    </div>
-
-    <div class="author">
-      <h> BY: JORGE LUIS BORGES </h>
-    </div>
-
-    <div class="question">
-      <h> ALL THINGS HAPPEN, HAPPEN TO ONE, PRECISELY NOW. </h>
-    </div>
-
-
-
-    <a href="pg2.html">
-     <button id="nextPageBtn"></button>
-  </a>
+ <div class="color-grid">
+    <div class="color-box" style="background-color: #FF5733;"></div>
+    <div class="color-box" style="background-color: #FFC300;"></div>
+    <div class="color-box" style="background-color: #DAF7A6;"></div>
+    <div class="color-box" style="background-color: #C70039;"></div>
+    <div class="color-box" style="background-color: #900C3F;"></div>
+    <div class="color-box" style="background-color: #581845;"></div>
+ </div>
   
-<script> 
-
-
-
-</script>
 
 </body>
 </html>
