--- a/home.html
+++ b/home.html
@@ -11,13 +11,26 @@
 
 <body>
  <div class="color-grid">
-    <div class="color-box" style="background-color: #FF5733;"></div>
+    <div class="color-box" style="background-color: #5B41FB;"></div>
+    <div class="color-box" style="background-color: #FF495E;"></div>
+    <div class="color-box" style="background-color: #FED213;"></div>
+    <div class="color-box" style="background-color: #35A52B;"></div>
+    <div class="color-box" style="background-color: #000000;"></div>
+    <div class="color-box" style="background-color: #DADEFF;"></div>
+    <div class="color-box" style="background-color: #6A1922;"></div>
     <div class="color-box" style="background-color: #FFC300;"></div>
     <div class="color-box" style="background-color: #DAF7A6;"></div>
     <div class="color-box" style="background-color: #C70039;"></div>
     <div class="color-box" style="background-color: #900C3F;"></div>
     <div class="color-box" style="background-color: #581845;"></div>
- </div>
+    <div class="color-box" style="background-color: #39BAE2;"></div>
+    <div class="color-box" style="background-color: #CCC1C7;"></div>
+    <div class="color-box" style="background-color: #E83148;"></div>
+    <div class="color-box" style="background-color: #E1DDDE;"></div>
+    <div class="color-box" style="background-color: #4D3477;"></div>
+    <div class="color-box" style="background-color: #F7DFAD;"></div>
+    <div class="color-box" style="background-color: #4E4243;"></div>
+    <div class="color-box" style="background-color: #FBBDD6;"></div>
   
 
 </body>
