--- a/home.html
+++ b/home.html
@@ -12,12 +12,16 @@
 <body>
  <div class="color-grid">
     <div class="color-box" style="background-color: #5B41FB;"></div>
+    <a href="page1.html" class="color-box" style="background-color: #5B41FB;"></a>
+
     <div class="color-box" style="background-color: #FF495E;"></div>
     <div class="color-box" style="background-color: #FED213;"></div>
     <div class="color-box" style="background-color: #35A52B;"></div>
     <div class="color-box" style="background-color: #000000;"></div>
     <div class="color-box" style="background-color: #DADEFF;"></div>
     <div class="color-box" style="background-color: #6A1922;"></div>
+    <a href="page2.html" class="color-box" style="background-color: #6A1922;"></a>
+
     <div class="color-box" style="background-color: #FFC300;"></div>
     <div class="color-box" style="background-color: #DAF7A6;"></div>
     <div class="color-box" style="background-color: #C70039;"></div>
