--- a/home.html
+++ b/home.html
@@ -19,8 +19,8 @@
     <div class="color-box" style="background-color: #35A52B;"></div>
     <div class="color-box" style="background-color: #000000;"></div>
     <div class="color-box" style="background-color: #DADEFF;"></div>
-    <div class="color-box" style="background-color: #6A1922;"></div>
-    <a href="page2.html" class="color-box" style="background-color: #6A1922;"></a>
+    <div class="color-box" style="background-color: #8E1C24;"></div>
+    <a href="page2.html" class="color-box" style="background-color: #8E1C24;"></a>
 
     <div class="color-box" style="background-color: #FFC300;"></div>
     <div class="color-box" style="background-color: #DAF7A6;"></div>
