--- a/home.html
+++ b/home.html
@@ -16,13 +16,19 @@
 
     <div class="color-box" style="background-color: #FF495E;"></div>
     <div class="color-box" style="background-color: #FED213;"></div>
-    <div class="color-box" style="background-color: #35A52B;"></div>
+    <div class="color-box" style="background-color: #D3EE87;"></div>
+    <a href="page5.html" class="color-box" style="background-color: #D3EE87;"></a>
+
     <div class="color-box" style="background-color: #000000;"></div>
-    <div class="color-box" style="background-color: #DADEFF;"></div>
+    <div class="color-box" style="background-color: #606477;"></div>
+    <a href="page3.html" class="color-box" style="background-color: #606477;"></a>
+
     <div class="color-box" style="background-color: #8E1C24;"></div>
     <a href="page2.html" class="color-box" style="background-color: #8E1C24;"></a>
 
-    <div class="color-box" style="background-color: #FFC300;"></div>
+    <div class="color-box" style="background-color: #FDA18A;"></div>
+    <a href="page4.html" class="color-box" style="background-color: #FDA18A;"></a>
+
     <div class="color-box" style="background-color: #DAF7A6;"></div>
     <div class="color-box" style="background-color: #C70039;"></div>
     <div class="color-box" style="background-color: #900C3F;"></div>
