--- a/page2.html
+++ b/page2.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="container">
-        <img src="/pg2-img/Screenshot_2024-03-21_at_8.57.51_AM-removebg-preview.png">
+        <img src="/EC/imgs/EC_1.png">
     </div>
 </body>
 
