--- a/page5.html
+++ b/page5.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="container">
-        <img src="/imgs/EC_4.png">
+        <img src="/EC/imgs/EC_4.png">
     </div>
 </body>
 
