--- a/page4.html
+++ b/page4.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="container">
-        <img src="/imgs/EC_3.png">
+        <img src="/EC/imgs/EC_3.png">
     </div>
 </body>
 
