--- a/home.html
+++ b/home.html
@@ -11,35 +11,51 @@
 
 <body>
  <div class="color-grid">
-    <div class="color-box" style="background-color: #5B41FB;"></div>
-    <a href="page1.html" class="color-box" style="background-color: #5B41FB;"></a>
-
-    <div class="color-box" style="background-color: #FF495E;"></div>
-    <div class="color-box" style="background-color: #FED213;"></div>
-    <div class="color-box" style="background-color: #D3EE87;"></div>
-    <a href="page5.html" class="color-box" style="background-color: #D3EE87;"></a>
-
-    <div class="color-box" style="background-color: #000000;"></div>
-    <div class="color-box" style="background-color: #606477;"></div>
-    <a href="page3.html" class="color-box" style="background-color: #606477;"></a>
-
     <div class="color-box" style="background-color: #8E1C24;"></div>
-    <a href="page2.html" class="color-box" style="background-color: #8E1C24;"></a>
+    <a href="page1.html" class="color-box" style="background-color: #8E1C24;"></a>
+
+    <div class="color-box" style="background-color: #606477;"></div>
+    <a href="page2.html" class="color-box" style="background-color: #606477;"></a>
 
     <div class="color-box" style="background-color: #FDA18A;"></div>
+    <a href="page3.html" class="color-box" style="background-color: #FDA18A;"></a>
+    
+    <div class="color-box" style="background-color: #ADF34A;"></div>
     <a href="page4.html" class="color-box" style="background-color: #FDA18A;"></a>
 
-    <div class="color-box" style="background-color: #DAF7A6;"></div>
+    <div class="color-box" style="background-color: #4E81EF;"></div>
+    <a href="page5.html" class="color-box" style="background-color: #4E81EF;"></a>
+
+    <div class="color-box" style="background-color: #F4F1C9;"></div>
+    <a href="page6.html" class="color-box" style="background-color: #F4F1C9;"></a>
+
+    <div class="color-box" style="background-color: #E0715A;"></div>
+    <a href="page7.html" class="color-box" style="background-color: #E0715A;"></a>
+
+    <div class="color-box" style="background-color: #7E96B9;"></div>
+    <a href="page8.html" class="color-box" style="background-color: #7E96B9;"></a>
+
+
     <div class="color-box" style="background-color: #C70039;"></div>
+
     <div class="color-box" style="background-color: #900C3F;"></div>
+
     <div class="color-box" style="background-color: #581845;"></div>
+
     <div class="color-box" style="background-color: #39BAE2;"></div>
+
     <div class="color-box" style="background-color: #CCC1C7;"></div>
+
     <div class="color-box" style="background-color: #E83148;"></div>
+
     <div class="color-box" style="background-color: #E1DDDE;"></div>
+
     <div class="color-box" style="background-color: #4D3477;"></div>
+
     <div class="color-box" style="background-color: #F7DFAD;"></div>
+
     <div class="color-box" style="background-color: #4E4243;"></div>
+
     <div class="color-box" style="background-color: #FBBDD6;"></div>
   
 
