--- a/page1.html
+++ b/page1.html
@@ -9,10 +9,11 @@
 
 <body>
     <div class="container">
-        <img src="/EC/imgs/EC_1.png">
+        <img src="/imgs/EC_1.png">
     </div>
 
-
+    <div class="background">
+    </div>
 </body>
 
 </html>
