--- a/page1.html
+++ b/page1.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="container">
-        <img src="/imgs/EC_1.png">
+        <img src="imgs/EC_1.png">
     </div>
 
     <div class="background">
