--- a/page1.html
+++ b/page1.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="page1.css">
+
 </head>
 
 <body>
@@ -14,6 +15,28 @@
 
     <div class="background">
     </div>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            document.querySelector('.container img').addEventListener('click', function(event) {
+                var container = document.querySelector('.container');
+                var square = document.createElement('div');
+                square.classList.add('square');
+                // Array of colors
+                var colors = ['#8D1B26', '#7D6862', '#FDFDD5', '#E1E0F1', '#2A2E34', '#F6AE06'];
+                // Choose a random color from the array
+                var randomColor = colors[Math.floor(Math.random() * colors.length)];
+                square.style.backgroundColor = randomColor;
+                // Generate random coordinates within container dimensions
+                var randomX = Math.floor(Math.random() * container.offsetWidth);
+                var randomY = Math.floor(Math.random() * container.offsetHeight);
+                square.style.left = randomX + 'px';
+                square.style.top = randomY + 'px';
+                container.appendChild(square);
+            });
+        });
+    </script>
+
 </body>
 
 </html>
