--- a/home.html
+++ b/home.html
@@ -12,29 +12,20 @@
 <body>
  <div class="color-grid">
     <div class="color-box" style="background-color: #8E1C24;"></div>
-    <a href="page1.html" class="color-box" style="background-color: #8E1C24;"></a>
 
     <div class="color-box" style="background-color: #606477;"></div>
-    <a href="page2.html" class="color-box" style="background-color: #606477;"></a>
 
     <div class="color-box" style="background-color: #FDA18A;"></div>
-    <a href="page3.html" class="color-box" style="background-color: #FDA18A;"></a>
     
     <div class="color-box" style="background-color: #ADF34A;"></div>
-    <a href="page4.html" class="color-box" style="background-color: #FDA18A;"></a>
 
     <div class="color-box" style="background-color: #4E81EF;"></div>
-    <a href="page5.html" class="color-box" style="background-color: #4E81EF;"></a>
 
     <div class="color-box" style="background-color: #F4F1C9;"></div>
-    <a href="page6.html" class="color-box" style="background-color: #F4F1C9;"></a>
 
     <div class="color-box" style="background-color: #E0715A;"></div>
-    <a href="page7.html" class="color-box" style="background-color: #E0715A;"></a>
 
     <div class="color-box" style="background-color: #7E96B9;"></div>
-    <a href="page8.html" class="color-box" style="background-color: #7E96B9;"></a>
-
 
     <div class="color-box" style="background-color: #C70039;"></div>
 
@@ -59,6 +50,12 @@
     <div class="color-box" style="background-color: #FBBDD6;"></div>
   
 
+
+<script src="script.js"></script>
+
 </body>
+
+
+
 </html>
 
