--- a/home.html
+++ b/home.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+
  <div class="color-grid">
     <div class="color-box" style="background-color: #8E1C24;"></div>
 
@@ -24,37 +25,50 @@
 
     <div class="color-box" style="background-color: #4E81EF;"></div>
 
-    <div class="color-box" style="background-color: #F4F1C9;"></div>
+    <div class="color-box" style="background-color: #EDDDF7;"></div>
 
-    <div class="color-box" style="background-color: #E0715A;"></div>
+    <div class="color-box" style="background-color: #EDE7BD;"></div>
 
-    <div class="color-box" style="background-color: #7E96B9;"></div>
+    <div class="color-box" style="background-color: #BE5341;"></div>
 
-    <div class="color-box" style="background-color: #C70039;"></div>
+    <div class="color-box" style="background-color: #839CB3;"></div>
 
-    <div class="color-box" style="background-color: #900C3F;"></div>
+    <div class="color-box" style="background-color: #292733;"></div>
 
-    <div class="color-box" style="background-color: #581845;"></div>
+    <div class="color-box" style="background-color: #93EA85;"></div>
 
-    <div class="color-box" style="background-color: #39BAE2;"></div>
+    <div class="color-box" style="background-color: #C4A9A3;"></div>
 
-    <div class="color-box" style="background-color: #CCC1C7;"></div>
+    <div class="color-box" style="background-color: #673937;"></div>
 
-    <div class="color-box" style="background-color: #E83148;"></div>
+    <div class="color-box" style="background-color: #3A3640;"></div>
 
-    <div class="color-box" style="background-color: #E1DDDE;"></div>
+    <div class="color-box" style="background-color: #EBD5E2;"></div>
 
-    <div class="color-box" style="background-color: #4D3477;"></div>
+    <div class="color-box" style="background-color: #2E84BF;"></div>
 
-    <div class="color-box" style="background-color: #F7DFAD;"></div>
+    <div class="color-box" style="background-color: #C99D6F;"></div>
 
-    <div class="color-box" style="background-color: #4E4243;"></div>
+    <div class="color-box" style="background-color: #A39563;"></div>
 
-    <div class="color-box" style="background-color: #FBBDD6;"></div>
+    <div class="color-box" style="background-color: #ACCBF4;"></div>
+
+    <div class="color-box" style="background-color: #C23D4C;"></div>
+
+    <div class="color-box" style="background-color: #2F3440;"></div>
+
+    <div class="color-box" style="background-color: #1DB85D;"></div>
+
+    <div class="color-box" style="background-color: #C29872;"></div>
+
+    <div class="color-box" style="background-color: #485988;"></div>
+
+    <div class="color-box" style="background-color: #E88E53;"></div>
+
+    <div class="color-box" style="background-color: #B26754;"></div>
+
+    <div class="color-box" style="background-color: #FFDAFF;"></div>
   
-
-
-
 
 
 <script src="script.js"></script>
