--- a/home.html
+++ b/home.html
@@ -71,6 +71,17 @@
   
 
 
+
+    <div class="sidebar">
+        <ul>
+
+            <li class="title">Your Website Title</li> <!-- Add this line -->
+
+            <li><a href="/intro.html">Intro</a></li>
+            <li><a href="/page2.html">Page2</a></li>
+        </ul>
+    </div>
+
 <script src="script.js"></script>
 
 </body>
