--- a/home.html
+++ b/home.html
@@ -75,10 +75,12 @@
     <div class="sidebar">
         <ul>
 
-            <li class="title">Your Website Title</li> <!-- Add this line -->
-
+            <li class="title">COLOR PALETTE OF NYC</li> 
+            <br>
+            
             <li><a href="/intro.html">Intro</a></li>
             <li><a href="/page2.html">Page2</a></li>
+
         </ul>
     </div>
 
