--- a/intro.html
+++ b/intro.html
@@ -17,13 +17,14 @@
     <div class="sidebar">
         <ul>
 
-            <li class="title">Your Website Title</li> 
-
+            <li class="title">COLOR PALETTE OF NYC</li> 
+            <br>
+            
             <li><a href="/intro.html">Intro</a></li>
             <li><a href="/page2.html">Page2</a></li>
+
         </ul>
     </div>
-
 <script src="script.js"></script>
 
 </body>
