--- a/home.html
+++ b/home.html
@@ -78,8 +78,8 @@
             <li class="title">COLOR PALETTE OF NYC</li> 
             <br>
             
-            <li><a href="/intro.html">Intro</a></li>
-            <li><a href="/page2.html">Page2</a></li>
+            <li><a href="/home.html">Part 1</a></li>
+            <li><a href="/page2.html">Part 2</a></li>
 
         </ul>
     </div>
