--- a/home.html
+++ b/home.html
@@ -72,18 +72,12 @@
 
 
 
-    <div class="sidebar">
-        <ul>
-
-            <li class="title">COLOR PALETTE OF NYC</li> 
-            <br>
-            
-            <li><a href="/home.html">Part 1</a></li>
-            <li><a href="/page2.html">Part 2</a></li>
-
-        </ul>
+    <div class="menu-bar">
+        <div class="menu-title">Color Palette of NYC</div>
+        <div class="menu-part1"><a href="home.html">One</a></div>
+        <div class="menu-part2"><a href="page2.html">Two</a></div>
     </div>
-
+    
 <script src="script.js"></script>
 
 </body>
