--- a/page2.html
+++ b/page2.html
@@ -19,45 +19,45 @@
 
     <div class="grid-container">
         <div class="grid-row">
-            <div class="grid-item"><img id="image1" src="EC/IMGS/EC_1.png" alt="Image 1" data-colors="#8D1B26, #7D6862, #FDFDD5, #E1E0F1"></div>
-            <div class="grid-item"><img id="image2" src="EC/IMGS/EC_2.png" alt="Image 2" data-colors="#5D6171, #151920"></div>
-            <div class="grid-item"><img id="image3" src="EC/IMGS/EC_3.png" alt="Image 3" data-colors="#FFAB96, #B6CCE9"></div>
-            <div class="grid-item"><img id="image4" src="EC/IMGS/EC_4.png" alt="Image 4" data-colors="#0F0E13, #F9F9F9, #92D027"></div>
+            <div class="grid-item"><img id="image1" src="/EC/IMGS/EC_1.png" alt="Image 1" data-colors="#8D1B26, #7D6862, #FDFDD5, #E1E0F1"></div>
+            <div class="grid-item"><img id="image2" src="/EC/IMGS/EC_2.png" alt="Image 2" data-colors="#5D6171, #151920"></div>
+            <div class="grid-item"><img id="image3" src="/EC/IMGS/EC_3.png" alt="Image 3" data-colors="#FFAB96, #B6CCE9"></div>
+            <div class="grid-item"><img id="image4" src="/EC/IMGS/EC_4.png" alt="Image 4" data-colors="#0F0E13, #F9F9F9, #92D027"></div>
         </div>
         <div class="grid-row">
-            <div class="grid-item"><img id="image5" src="EC/IMGS/EC_5.png" alt="Image 5" data-colors="#578CF2, #D70C1F, #F2F4FF"></div>
-            <div class="grid-item"><img id="image6" src="EC/IMGS/EC_6.png" alt="Image 6" data-colors="#F0DFFC, #E5EBEE"></div>
-            <div class="grid-item"><img id="image7" src="EC/IMGS/EC_7.png" alt="Image 7" data-colors="#EAE4B7, #1F7CB6, #4A506F, #EEE2E0"></div>
-            <div class="grid-item"><img id="image8" src="EC/IMGS/EC_8.png" alt="Image 8" data-colors="#DD6F5B, #C8874A, #BE5341"></div>
+            <div class="grid-item"><img id="image5" src="/EC/IMGS/EC_5.png" alt="Image 5" data-colors="#578CF2, #D70C1F, #F2F4FF"></div>
+            <div class="grid-item"><img id="image6" src="/EC/IMGS/EC_6.png" alt="Image 6" data-colors="#F0DFFC, #E5EBEE"></div>
+            <div class="grid-item"><img id="image7" src="/EC/IMGS/EC_7.png" alt="Image 7" data-colors="#EAE4B7, #1F7CB6, #4A506F, #EEE2E0"></div>
+            <div class="grid-item"><img id="image8" src="/EC/IMGS/EC_8.png" alt="Image 8" data-colors="#DD6F5B, #C8874A, #BE5341"></div>
         </div>
         <div class="grid-row">
-            <div class="grid-item"><img id="image9" src="EC/IMGS/EC_9.png" alt="Image 9" data-colors="#7E96B9, #3E444B, #35363B, #C11E49, #C9CFDB"></div>
-            <div class="grid-item"><img id="image10" src="EC/IMGS/EC_10.png" alt="Image 10" data-colors="#1E1D26"></div>
-            <div class="grid-item"><img id="image11" src="EC/IMGS/EC_11.png" alt="Image 11" data-colors="#97E385, #151D3F"></div>
-            <div class="grid-item"><img id="image12" src="EC/IMGS/EC_12.png" alt="Image 12" data-colors="#C8B5B0, #FCFCFC, #5796B5, #DEC298, #5C5860, #FD8775, #B5CBD8"></div>
+            <div class="grid-item"><img id="image9" src="/EC/IMGS/EC_9.png" alt="Image 9" data-colors="#7E96B9, #3E444B, #35363B, #C11E49, #C9CFDB"></div>
+            <div class="grid-item"><img id="image10" src="/EC/IMGS/EC_10.png" alt="Image 10" data-colors="#1E1D26"></div>
+            <div class="grid-item"><img id="image11" src="/EC/IMGS/EC_11.png" alt="Image 11" data-colors="#97E385, #151D3F"></div>
+            <div class="grid-item"><img id="image12" src="/EC/IMGS/EC_12.png" alt="Image 12" data-colors="#C8B5B0, #FCFCFC, #5796B5, #DEC298, #5C5860, #FD8775, #B5CBD8"></div>
         </div>
         <div class="grid-row">
-            <div class="grid-item"><img id="image13" src="EC/IMGS/EC_13.png" alt="Image 13" data-colors="#663836, #BD856C"></div>
-            <div class="grid-item"><img id="image14" src="EC/IMGS/EC_14.png" alt="Image 14" data-colors="#65463, #91AAB8"></div>
-            <div class="grid-item"><img id="image15" src="EC/IMGS/EC_15.png" alt="Image 15" data-colors="#EEDAE6, #64A8DF"></div>
-            <div class="grid-item"><img id="image16" src="EC/IMGS/EC_16.png" alt="Image 16" data-colors="#2B83BC, #EEDDB9"></div>
+            <div class="grid-item"><img id="image13" src="/EC/IMGS/EC_13.png" alt="Image 13" data-colors="#663836, #BD856C"></div>
+            <div class="grid-item"><img id="image14" src="/EC/IMGS/EC_14.png" alt="Image 14" data-colors="#65463, #91AAB8"></div>
+            <div class="grid-item"><img id="image15" src="/EC/IMGS/EC_15.png" alt="Image 15" data-colors="#EEDAE6, #64A8DF"></div>
+            <div class="grid-item"><img id="image16" src="/EC/IMGS/EC_16.png" alt="Image 16" data-colors="#2B83BC, #EEDDB9"></div>
         </div>
         <div class="grid-row">
-            <div class="grid-item"><img id="image17" src="EC/IMGS/EC_17.png" alt="Image 17" data-colors="#CB9F71"></div>
-            <div class="grid-item"><img id="image18" src="EC/IMGS/EC_18.png" alt="Image 18" data-colors="#D7D2DB, #171B25, #B4A775, #B2BDC7"></div>
-            <div class="grid-item"><img id="image19" src="EC/IMGS/EC_19.png" alt="Image 19" data-colors="#A8C4EC, #BB99F5, #4A8C68, #FDD693"></div>
-            <div class="grid-item"><img id="image20" src="EC/IMGS/EC_20.png" alt="Image 20" data-colors="#E96279, #C9B7A9, #87A09A, #3E484A"></div>
+            <div class="grid-item"><img id="image17" src="/EC/IMGS/EC_17.png" alt="Image 17" data-colors="#CB9F71"></div>
+            <div class="grid-item"><img id="image18" src="/EC/IMGS/EC_18.png" alt="Image 18" data-colors="#D7D2DB, #171B25, #B4A775, #B2BDC7"></div>
+            <div class="grid-item"><img id="image19" src="/EC/IMGS/EC_19.png" alt="Image 19" data-colors="#A8C4EC, #BB99F5, #4A8C68, #FDD693"></div>
+            <div class="grid-item"><img id="image20" src="/EC/IMGS/EC_20.png" alt="Image 20" data-colors="#E96279, #C9B7A9, #87A09A, #3E484A"></div>
         </div>
         <div class="grid-row">
-            <div class="grid-item"><img id="image21" src="EC/IMGS/EC_21.png" alt="Image 21" data-colors="#32373F, #FFE1FD"></div>
-            <div class="grid-item"><img id="image22" src="EC/IMGS/EC_22.png" alt="Image 22" data-colors="#15BE5F, #624439, #A1CDF3, #AB3636, #272B35"></div>
-            <div class="grid-item"><img id="image23" src="EC/IMGS/EC_23.png" alt="Image 23" data-colors="#B98D65, #E3E1DF, #90A7B3"></div>
-            <div class="grid-item"><img id="image24" src="EC/IMGS/EC_24.png" alt="Image 24" data-colors="#95656F, #394C79, #DEE3E2"></div>
+            <div class="grid-item"><img id="image21" src="/EC/IMGS/EC_21.png" alt="Image 21" data-colors="#32373F, #FFE1FD"></div>
+            <div class="grid-item"><img id="image22" src="/EC/IMGS/EC_22.png" alt="Image 22" data-colors="#15BE5F, #624439, #A1CDF3, #AB3636, #272B35"></div>
+            <div class="grid-item"><img id="image23" src="/EC/IMGS/EC_23.png" alt="Image 23" data-colors="#B98D65, #E3E1DF, #90A7B3"></div>
+            <div class="grid-item"><img id="image24" src="/EC/IMGS/EC_24.png" alt="Image 24" data-colors="#95656F, #394C79, #DEE3E2"></div>
         </div>
         <div class="grid-row">
-            <div class="grid-item"><img id="image25" src="EC/IMGS/EC_25.png" alt="Image 25" data-colors="#F09A61, #92574B, #EAEAE1, #838889, #BCAC9C, #2E3643"></div>
-            <div class="grid-item"><img id="image26" src="EC/IMGS/EC_26.png" alt="Image 26" data-colors="#A15743, #0D1522, #264F84, #6E1234, #CDE4FD"></div>
-            <div class="grid-item"><img id="image27" src="EC/IMGS/EC_27.png" alt="Image 27" data-colors="#F1F6FF, #343346, #1755B3, #FFDAFF"></div>
+            <div class="grid-item"><img id="image25" src="/EC/IMGS/EC_25.png" alt="Image 25" data-colors="#F09A61, #92574B, #EAEAE1, #838889, #BCAC9C, #2E3643"></div>
+            <div class="grid-item"><img id="image26" src="/EC/IMGS/EC_26.png" alt="Image 26" data-colors="#A15743, #0D1522, #264F84, #6E1234, #CDE4FD"></div>
+            <div class="grid-item"><img id="image27" src="/EC/IMGS/EC_27.png" alt="Image 27" data-colors="#F1F6FF, #343346, #1755B3, #FFDAFF"></div>
         </div>
     </div>
 
