--- a/page2.html
+++ b/page2.html
@@ -19,7 +19,7 @@
 
     <div class="grid-container">
         <div class="grid-row">
-            <div class="grid-item"><img id="image1" src="/EC/IMGS/EC_1.png" alt="Image 1" data-colors="#8D1B26, #7D6862, #FDFDD5, #E1E0F1"></div>
+            <div class="grid-item"><img id="image1" src="imgs/EC_1.png" alt="Image 1" data-colors="#8D1B26, #7D6862, #FDFDD5, #E1E0F1"></div>
             <div class="grid-item"><img id="image2" src="/EC/IMGS/EC_2.png" alt="Image 2" data-colors="#5D6171, #151920"></div>
             <div class="grid-item"><img id="image3" src="/EC/IMGS/EC_3.png" alt="Image 3" data-colors="#FFAB96, #B6CCE9"></div>
             <div class="grid-item"><img id="image4" src="/EC/IMGS/EC_4.png" alt="Image 4" data-colors="#0F0E13, #F9F9F9, #92D027"></div>
